src/tests/errors/lexing/test07.cmp
program main 
begin
    procedure x() 
    begin 
       beginx := 1  (* keyword != identifier *)
    end 
end 